--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <div class="what__row">
                         <img src="../../image/what/what-img.png" alt="What flexbox?" class="what__img">
                         <div class="what-flexbox">
-                            <h1 class="what-flexbox__title">Что такое FlexBox?</h1>
+                            <h1 class="what-flexbox__title title">Что такое FlexBox?</h1>
                             <p class="what-flexbox__text">
                                 Flexbox - это целый модуль, содержащий в себе набор свойств и их значений как для
                                 родителя
@@ -50,15 +50,58 @@
                     </div>
                 </div>
             </section>
-        </div>
-        <!-- ! footer -->
-        <footer class="footer">
-            <div class="container">
-                <div class="footer__text">
-                    Фрилансер по жизни 2019
+            <!-- ! Flex columns -->
+            <section class="flex-columns">
+                <div class="container">
+                    <h1 class="flex-columns__title title">Колонки с flex-контейнерами</h1>
+                    <div class="flex-container">
+                        <div class="flex-container__row">
+                            <img src="../../image/flex-columns/image_flex_columns.png" alt="Purple background" class="flex-container__image">
+                            <div class="flex-container__body">
+                                <h2 class="flex-container__title">The description for the image</h2>
+                                <p class="flex-container__text">
+                                    Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel
+                                    exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores.
+                                    Sequi itaque, unde perferendis nemo debitis dolor.
+                                </p>
+                            </div>
+                            <img src="../../image/flex-columns/image_flex_columns.png" alt="Purple background" class="flex-container__image">
+                            <div class="flex-container__body">
+                                <h2 class="flex-container__title">The description for the image</h2>
+                                <p class="flex-container__text">
+                                    Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel
+                                    exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores.
+                                    Sequi itaque, unde perferendis nemo debitis dolor.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="flex-container__row">
+                        <img src="../../image/flex-columns/image_flex_columns.png" alt="Purple background" class="flex-container__image">
+                        <div class="flex-container__body">
+                            <h2 class="flex-container__title">The description for the image</h2>
+                            <p class="flex-container__text">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis facilis fuga, illo at. Natus eos, eligendi illum rerum omnis porro ex, magni, explicabo veniam incidunt in quam sapiente ut ipsum.
+                            </p>
+                        </div>
+                        <img src="../../image/flex-columns/image_flex_columns.png" alt="Purple background" class="flex-container__image">
+                        <div class="flex-container__body">
+                            <h2 class="flex-container__title">The description for the image</h2>
+                            <p class="flex-container__text">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis facilis fuga, illo at. Natus eos, eligendi illum rerum omnis porro ex, magni, explicabo veniam incidunt in quam sapiente ut ipsum.
+                            </p>
+                        </div>
+                    </div>
                 </div>
-            </div>
-        </footer>
+        </div>
+        </section>
+    </div>
+    <!-- ! footer -->
+    <footer class="footer">
+        <div class="container">
+            <p class="footer__text">Фрилансер по жизни 2019</p>
+        </div>
+    </footer>
     </div>
     <script src="js/script.js" type="text/javascript"></script>
     <noscript>
