--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div class="container">
                     <div class="what__row">
                         <img src="../../image/what/what-img.png" alt="What flexbox?" class="what__img">
-                        <div class="what-flexbox">
+                        <aside class="what-flexbox">
                             <h1 class="what-flexbox__title title">Что такое FlexBox?</h1>
                             <p class="what-flexbox__text">
                                 Flexbox - это целый модуль, содержащий в себе набор свойств и их значений как для
@@ -46,7 +46,7 @@
                                 доступное пространство flex-контейнера
                             </p>
                             </p>
-                        </div>
+                        </aside>
                     </div>
                 </div>
             </section>
@@ -94,6 +94,51 @@
                     </div>
                 </div>
         </div>
+        </section>
+        <!-- ! Flex vertical align -->
+        <section class="flex-vertical-align">
+            <div class="container">
+                <div class="flex-vertical-align__title title">Вертикальное выравнивание</div>
+                <div class="flex-vertical-align__body">
+                    <div class="flex-vertical-align__row">
+                        <div class="flex-vertical-align__columns">
+                            <!-- ! Item -->
+                            <div class="flex-vertical-align__item">
+                                <div class="flex-vertical-align__subtitle">буду рад</div>
+                                <div class="flex-vertical-align__suptitle">подписке</div>
+                                <div class="flex-vertical-align__text">
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint tenetur fugit vel, eligendi illum, placeat quo vero reiciendis consectetur.
+                                </div>
+                                <button class="flex-vertical-align__button">подписаться</button>
+                            </div>
+                        </div>
+                        <div class="flex-vertical-align__columns">
+                            <div class="flex-vertical-align__item">
+                                <div class="flex-vertical-align__subtitle">буду рад</div>
+                                <div class="flex-vertical-align__suptitle">лайку</div>
+                                <div class="flex-vertical-align__text">
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint tenetur fugit vel, eligendi illum, placeat quo vero reiciendis consectetur voluptatibus atque et itaque, hic, deleniti. Sunt commodi tempora voluptatum dolorum.
+                                    <p class="flex-vertical-align__text flex-vertical-align__text--indent">
+                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint tenetur fugit vel, eligendi illum, placeat quo vero reiciendis consectetur tempora voluptatum dolorum.
+                                    </p>
+
+                                </div>
+                                <button class="flex-vertical-align__button">лайк</button>
+                            </div>
+                        </div>
+                        <div class="flex-vertical-align__columns">
+                            <!-- ! Item -->
+                            <div class="flex-vertical-align__item">
+                                <div class="flex-vertical-align__subtitle">буду рад</div>
+                                <div class="flex-vertical-align__suptitle">комментарию</div>
+                                <div class="flex-vertical-align__text">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.
+                                </div>
+                                <button class="flex-vertical-align__button">комментировать</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
         </section>
     </div>
     <!-- ! footer -->
