add comment and some JS

--- a/index.html
+++ b/index.html
@@ -109,21 +109,22 @@
                                 <div class="flex-vertical-align__text">
                                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint tenetur fugit vel, eligendi illum, placeat quo vero reiciendis consectetur.
                                 </div>
-                                <button class="flex-vertical-align__button">подписаться</button>
+                                <button class="flex-vertical-align__button" onclick="subscripe();">подписаться</button>
                             </div>
                         </div>
-                        <div class="flex-vertical-align__columns">
+                        <div class=" flex-vertical-align__columns">
                             <div class="flex-vertical-align__item">
+                                <!-- ! Item -->
                                 <div class="flex-vertical-align__subtitle">буду рад</div>
                                 <div class="flex-vertical-align__suptitle">лайку</div>
                                 <div class="flex-vertical-align__text">
                                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint tenetur fugit vel, eligendi illum, placeat quo vero reiciendis consectetur voluptatibus atque et itaque, hic, deleniti. Sunt commodi tempora voluptatum dolorum.
-                                    <p class="flex-vertical-align__text flex-vertical-align__text--indent">
+                                    <p>
                                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint tenetur fugit vel, eligendi illum, placeat quo vero reiciendis consectetur tempora voluptatum dolorum.
                                     </p>
 
                                 </div>
-                                <button class="flex-vertical-align__button">лайк</button>
+                                <button class="flex-vertical-align__button" onclick="like();">лайк</button>
                             </div>
                         </div>
                         <div class="flex-vertical-align__columns">
@@ -134,7 +135,7 @@
                                 <div class="flex-vertical-align__text">
                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.
                                 </div>
-                                <button class="flex-vertical-align__button">комментировать</button>
+                                <button class="flex-vertical-align__button" onclick="comment();">комментировать</button>
                             </div>
                         </div>
                     </div>
@@ -144,7 +145,7 @@
     <!-- ! footer -->
     <footer class="footer">
         <div class="container">
-            <p class="footer__text">Фрилансер по жизни 2019</p>
+            <a href="https://www.youtube.com/channel/UCedskVwIKiZJsO8XdJdLKnA" class="footer__text">Фрилансер по жизни 2019</a>
         </div>
     </footer>
     </div>
