--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/style.css" type="text/css">
-    <meta name="viewport" content="width=1060">
+    <meta name="viewport" content="width=device-width">
     <title>flex practice</title>
 </head>
 
