--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zxx">
 
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/style.css" type="text/css">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"> -->
     <meta name="viewport" content="width=device-width">
+    <meta name=" format-detection" content="telephone=no">
+    <meta name="description" content="...">
+    <meta name="keywords" content="...">
+    <meta name="robots" content="none">
+    <meta name="Author" content="Transparency">
+    <meta name="Copyright" content="Transparency">
+    <meta name="Address" content="Unknown">
+    <!-- <meta http-equiv="refresh" content="0; url=/"> -->
     <title>flex practice</title>
 </head>
 
@@ -12,11 +21,11 @@
     <div class="wrapper">
         <div class="content">
             <!-- ! Hi -->
-            <section class="hi">
+            <div class="hi">
                 <div class="container">
                     <div class="hi__row">
                         <div class="hi__body">
-                            <p class="hi__title">Привет, друг!</p>
+                            <div class="hi__title">Привет, друг!</div>
                             <ul class="hi__list">
                                 <li>У тебя все получится!</li>
                                 <li>Никогда не сдавайся!</li>
@@ -24,79 +33,79 @@
                                 <li>Спасибо тебе за поддержку!</li>
                             </ul>
                         </div>
-                        <img src="../../image/hi/hi_image.png" alt="Hi image" class="hi__image"></img>
+                        <img src="../../image/hi/hi_image.png" alt="Hi image" class="hi__image">
                     </div>
                 </div>
-            </section>
+            </div>
             <!-- ! What -->
-            <section class="what">
+            <div class="what">
                 <div class="container">
                     <div class="what__row">
                         <img src="../../image/what/what-img.png" alt="What flexbox?" class="what__img">
-                        <aside class="what-flexbox">
-                            <h1 class="what-flexbox__title title">Что такое FlexBox?</h1>
-                            <p class="what-flexbox__text">
+                        <div class="what-flexbox">
+                            <div class="what-flexbox__title title">Что такое FlexBox?</div>
+                            <div class="what-flexbox__text">
                                 Flexbox - это целый модуль, содержащий в себе набор свойств и их значений как для
                                 родителя
                                 flex-контейнера так и для его дочерних элементов flex-элементов.
-                            <p class="what-flexbox__text what-flexbox__text--indent">
+                            </div>
+                            <div class="what-flexbox__text what-flexbox__text--indent">
                                 Основным преимуществом гибкой FLEX разметки является возможность изменять
                                 ширину/высоту
                                 пространство вокруг и порядок flex-элементов, для того чтобы наилучшим образом
                                 заполнить
                                 доступное пространство flex-контейнера
-                            </p>
-                            </p>
-                        </aside>
+                            </div>
+                        </div>
                     </div>
                 </div>
-            </section>
+            </div>
             <!-- ! Flex columns -->
-            <section class="flex-columns">
+            <div class="flex-columns">
                 <div class="container">
-                    <h1 class="flex-columns__title title">Колонки с flex-контейнерами</h1>
+                    <div class="flex-columns__title title">Колонки с flex-контейнерами</div>
                     <div class="flex-container">
                         <div class="flex-container__row">
                             <img src="../../image/flex-columns/image_flex_columns.png" alt="Purple background" class="flex-container__image">
                             <div class="flex-container__body">
-                                <h2 class="flex-container__title">The description for the image</h2>
-                                <p class="flex-container__text">
+                                <div class="flex-container__title">The description for the image</div>
+                                <div class="flex-container__text">
                                     Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel
                                     exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores.
                                     Sequi itaque, unde perferendis nemo debitis dolor.
-                                </p>
+                                </div>
                             </div>
                             <img src="../../image/flex-columns/image_flex_columns.png" alt="Purple background" class="flex-container__image">
                             <div class="flex-container__body">
-                                <h2 class="flex-container__title">The description for the image</h2>
-                                <p class="flex-container__text">
+                                <div class="flex-container__title">The description for the image</div>
+                                <div class="flex-container__text">
                                     Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel
                                     exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores.
                                     Sequi itaque, unde perferendis nemo debitis dolor.
-                                </p>
+                                </div>
                             </div>
                         </div>
                     </div>
                     <div class="flex-container__row">
                         <img src="../../image/flex-columns/image_flex_columns.png" alt="Purple background" class="flex-container__image">
                         <div class="flex-container__body">
-                            <h2 class="flex-container__title">The description for the image</h2>
-                            <p class="flex-container__text">
+                            <div class="flex-container__title">The description for the image</div>
+                            <div class="flex-container__text">
                                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis facilis fuga, illo at. Natus eos, eligendi illum rerum omnis porro ex, magni, explicabo veniam incidunt in quam sapiente ut ipsum.
-                            </p>
+                            </div>
                         </div>
                         <img src="../../image/flex-columns/image_flex_columns.png" alt="Purple background" class="flex-container__image">
                         <div class="flex-container__body">
-                            <h2 class="flex-container__title">The description for the image</h2>
-                            <p class="flex-container__text">
+                            <div class="flex-container__title">The description for the image</div>
+                            <div class="flex-container__text">
                                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis facilis fuga, illo at. Natus eos, eligendi illum rerum omnis porro ex, magni, explicabo veniam incidunt in quam sapiente ut ipsum.
-                            </p>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </section>
+            </div>
             <!-- ! Flex vertical align -->
-            <section class="flex-vertical-align">
+            <div class="flex-vertical-align">
                 <div class="container">
                     <div class="flex-vertical-align__title title">Вертикальное выравнивание</div>
                     <div class="flex-vertical-align__body">
@@ -121,7 +130,6 @@
                                         <p class="flex-vertical-align__text flex-vertical-align__text--indent">
                                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint tenetur fugit vel, eligendi illum, placeat quo vero reiciendis consectetur tempora voluptatum dolorum.
                                         </p>
-
                                     </div>
                                     <button class="flex-vertical-align__button" onclick="like();">лайк</button>
                                 </div>
@@ -139,19 +147,28 @@
                             </div>
                         </div>
                     </div>
-            </section>
+                </div>
+            </div>
         </div>
         <!-- ! footer -->
         <footer class="footer">
             <div class="container">
-                <p class="footer__text">Фрилансер по жизни 2019</p>
+                <div class="footer__text">Фрилансер по жизни 2019</div>
             </div>
         </footer>
     </div>
-    <script src="js/script.js" type="text/javascript"></script>
+    <script src="js/script.js"></script>
     <noscript>
-        Внимание! В вашем браузере отключен JavaScript! Без него большая часть функционала сайта
-        работать не будет или будет работать некорректно!
+        <div class="noscript">
+            <div class="noscript__title">Внимание!</div>
+            <div class="noscript__title-sup">
+                В вашем браузере отключен JavaScript.
+                Или установлена старая версия JavaScript!
+            </div>
+            <div class="noscript__text">
+                Без него большая часть функционала сайтаработать не будет или будет работать некорректно!
+            </div>
+        </div>
     </noscript>
 </body>
 
