--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"> -->
-    <meta name="viewport" content="width=device-width">
+    <!-- <meta name="viewport" content="width=device-width"> -->
+    <meta name="viewport" content="width=1060">
     <meta name=" format-detection" content="telephone=no">
     <meta name="description" content="...">
     <meta name="keywords" content="...">
@@ -20,156 +21,153 @@
 <body>
     <div class="wrapper">
         <div class="content">
-            <!-- ! Hi -->
-            <div class="hi">
-                <div class="container">
-                    <div class="hi__row">
-                        <div class="hi__body">
-                            <div class="hi__title">Привет, друг!</div>
-                            <ul class="hi__list">
-                                <li>У тебя все получится!</li>
-                                <li>Никогда не сдавайся!</li>
-                                <li>Сегодня ты уже знаешь больше чем вчера!</li>
-                                <li>Спасибо тебе за поддержку!</li>
-                            </ul>
-                        </div>
-                        <img src="../../image/hi/hi_image.png" alt="Hi image" class="hi__image">
-                    </div>
-                </div>
+<!-- ! Hi -->
+<div class="hi">
+    <div class="container">
+        <div class="hi__row">
+            <div class="hi__body">
+                <div class="hi__title">Привет, друг!</div>
+                <ul class="hi__list">
+                    <li>У тебя все получится!</li>
+                    <li>Никогда не сдавайся!</li>
+                    <li>Сегодня ты уже знаешь больше чем вчера!</li>
+                    <li>Спасибо тебе за поддержку!</li>
+                </ul>
             </div>
-            <!-- ! What -->
-            <div class="what">
-                <div class="container">
-                    <div class="what__row">
-                        <img src="../../image/what/what-img.png" alt="What flexbox?" class="what__img">
-                        <div class="what-flexbox">
-                            <div class="what-flexbox__title title">Что такое FlexBox?</div>
-                            <div class="what-flexbox__text">
-                                Flexbox - это целый модуль, содержащий в себе набор свойств и их значений как для
-                                родителя
-                                flex-контейнера так и для его дочерних элементов flex-элементов.
-                            </div>
-                            <div class="what-flexbox__text what-flexbox__text--indent">
-                                Основным преимуществом гибкой FLEX разметки является возможность изменять
-                                ширину/высоту
-                                пространство вокруг и порядок flex-элементов, для того чтобы наилучшим образом
-                                заполнить
-                                доступное пространство flex-контейнера
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- ! Flex columns -->
-            <div class="flex-columns">
-                <div class="container">
-                    <div class="flex-columns__title title">Колонки с flex-контейнерами</div>
-                    <div class="flex-container">
-                        <div class="flex-container__row">
-                            <img src="../../image/flex-columns/image_flex_columns.png" alt="Purple background" class="flex-container__image">
-                            <div class="flex-container__body">
-                                <div class="flex-container__title">The description for the image</div>
-                                <div class="flex-container__text">
-                                    Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel
-                                    exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores.
-                                    Sequi itaque, unde perferendis nemo debitis dolor.
-                                </div>
-                            </div>
-                            <img src="../../image/flex-columns/image_flex_columns.png" alt="Purple background" class="flex-container__image">
-                            <div class="flex-container__body">
-                                <div class="flex-container__title">The description for the image</div>
-                                <div class="flex-container__text">
-                                    Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel
-                                    exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores.
-                                    Sequi itaque, unde perferendis nemo debitis dolor.
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="flex-container__row">
-                        <img src="../../image/flex-columns/image_flex_columns.png" alt="Purple background" class="flex-container__image">
-                        <div class="flex-container__body">
-                            <div class="flex-container__title">The description for the image</div>
-                            <div class="flex-container__text">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis facilis fuga, illo at. Natus eos, eligendi illum rerum omnis porro ex, magni, explicabo veniam incidunt in quam sapiente ut ipsum.
-                            </div>
-                        </div>
-                        <img src="../../image/flex-columns/image_flex_columns.png" alt="Purple background" class="flex-container__image">
-                        <div class="flex-container__body">
-                            <div class="flex-container__title">The description for the image</div>
-                            <div class="flex-container__text">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis facilis fuga, illo at. Natus eos, eligendi illum rerum omnis porro ex, magni, explicabo veniam incidunt in quam sapiente ut ipsum.
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- ! Flex vertical align -->
-            <div class="flex-vertical-align">
-                <div class="container">
-                    <div class="flex-vertical-align__title title">Вертикальное выравнивание</div>
-                    <div class="flex-vertical-align__body">
-                        <div class="flex-vertical-align__row">
-                            <div class="flex-vertical-align__columns">
-                                <!-- ! Item -->
-                                <div class="flex-vertical-align__item">
-                                    <div class="flex-vertical-align__subtitle">буду рад</div>
-                                    <div class="flex-vertical-align__suptitle">подписке</div>
-                                    <div class="flex-vertical-align__text">
-                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint tenetur fugit vel, eligendi illum, placeat quo vero reiciendis consectetur.
-                                    </div>
-                                    <button class="flex-vertical-align__button" onclick="subscripe()">подписаться</button>
-                                </div>
-                            </div>
-                            <div class="flex-vertical-align__columns">
-                                <div class="flex-vertical-align__item">
-                                    <div class="flex-vertical-align__subtitle">буду рад</div>
-                                    <div class="flex-vertical-align__suptitle">лайку</div>
-                                    <div class="flex-vertical-align__text">
-                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint tenetur fugit vel, eligendi illum, placeat quo vero reiciendis consectetur voluptatibus atque et itaque, hic, deleniti. Sunt commodi tempora voluptatum dolorum.
-                                        <p class="flex-vertical-align__text flex-vertical-align__text--indent">
-                                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint tenetur fugit vel, eligendi illum, placeat quo vero reiciendis consectetur tempora voluptatum dolorum.
-                                        </p>
-                                    </div>
-                                    <button class="flex-vertical-align__button" onclick="like();">лайк</button>
-                                </div>
-                            </div>
-                            <div class="flex-vertical-align__columns">
-                                <!-- ! Item -->
-                                <div class="flex-vertical-align__item">
-                                    <div class="flex-vertical-align__subtitle">буду рад</div>
-                                    <div class="flex-vertical-align__suptitle">комментарию</div>
-                                    <div class="flex-vertical-align__text">
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.
-                                    </div>
-                                    <button class="flex-vertical-align__button" onclick="comment();">комментировать</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <img src="../../image/hi/hi_image.png" alt="Hi image" class="hi__image">
         </div>
-        <!-- ! footer -->
-        <footer class="footer">
-            <div class="container">
-                <div class="footer__text">Фрилансер по жизни 2019</div>
-            </div>
-        </footer>
     </div>
-    <script src="js/script.js"></script>
-    <noscript>
-        <div class="noscript">
-            <div class="noscript__title">Внимание!</div>
-            <div class="noscript__title-sup">
-                В вашем браузере отключен JavaScript.
-                Или установлена старая версия JavaScript!
-            </div>
-            <div class="noscript__text">
-                Без него большая часть функционала сайтаработать не будет или будет работать некорректно!
+</div><!-- ! What -->
+<div class="what">
+    <div class="container">
+        <div class="what__row">
+            <img src="../../image/what/what-img.png" alt="What flexbox?" class="what__img">
+            <div class="what-flexbox">
+                <div class="what-flexbox__title title">Что такое FlexBox?</div>
+                <div class="what-flexbox__text">
+                    Flexbox - это целый модуль, содержащий в себе набор свойств и их значений как для
+                    родителя
+                    flex-контейнера так и для его дочерних элементов flex-элементов.
+                </div>
+                <div class="what-flexbox__text what-flexbox__text--indent">
+                    Основным преимуществом гибкой FLEX разметки является возможность изменять
+                    ширину/высоту
+                    пространство вокруг и порядок flex-элементов, для того чтобы наилучшим образом
+                    заполнить
+                    доступное пространство flex-контейнера
+                </div>
             </div>
         </div>
-    </noscript>
+    </div>
+</div><!-- ! Flex columns -->
+<div class="flex-columns">
+    <div class="container">
+        <div class="flex-columns__title title">Колонки с flex-контейнерами</div>
+        <div class="flex-container">
+            <div class="flex-container__row">
+                <img src="../../image/flex-columns/image_flex_columns.png" alt="Purple background" class="flex-container__image">
+                <div class="flex-container__body">
+                    <div class="flex-container__title">The description for the image</div>
+                    <div class="flex-container__text">
+                        Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel
+                        exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores.
+                        Sequi itaque, unde perferendis nemo debitis dolor.
+                    </div>
+                </div>
+                <img src="../../image/flex-columns/image_flex_columns.png" alt="Purple background" class="flex-container__image">
+                <div class="flex-container__body">
+                    <div class="flex-container__title">The description for the image</div>
+                    <div class="flex-container__text">
+                        Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel
+                        exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores.
+                        Sequi itaque, unde perferendis nemo debitis dolor.
+                    </div>
+                </div>
+            </div>
+            <div class="flex-container__row">
+                <img src="../../image/flex-columns/image_flex_columns.png" alt="Purple background" class="flex-container__image">
+                <div class="flex-container__body">
+                    <div class="flex-container__title">The description for the image</div>
+                    <div class="flex-container__text">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis facilis fuga, illo at. Natus eos, eligendi illum rerum omnis porro ex, magni, explicabo veniam incidunt in quam sapiente ut ipsum.
+                    </div>
+                </div>
+                <img src="../../image/flex-columns/image_flex_columns.png" alt="Purple background" class="flex-container__image">
+                <div class="flex-container__body">
+                    <div class="flex-container__title">The description for the image</div>
+                    <div class="flex-container__text">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis facilis fuga, illo at. Natus eos, eligendi illum rerum omnis porro ex, magni, explicabo veniam incidunt in quam sapiente ut ipsum.
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div><!-- ! Flex vertical align -->
+<div class="flex-vertical-align">
+    <div class="container">
+        <div class="flex-vertical-align__title title">Вертикальное выравнивание</div>
+        <div class="flex-vertical-align__body">
+            <div class="flex-vertical-align__row">
+                <div class="flex-vertical-align__columns">
+                    <!-- ! Item -->
+                    <div class="flex-vertical-align__item">
+                        <div class="flex-vertical-align__subtitle">буду рад</div>
+                        <div class="flex-vertical-align__suptitle">подписке</div>
+                        <div class="flex-vertical-align__text">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint tenetur fugit vel, eligendi illum, placeat quo vero reiciendis consectetur.
+                        </div>
+                        <button class="flex-vertical-align__button" onclick="subscripe()">подписаться</button>
+                    </div>
+                </div>
+                <div class="flex-vertical-align__columns">
+                    <!-- ! Item -->
+                    <div class="flex-vertical-align__item">
+                        <div class="flex-vertical-align__subtitle">буду рад</div>
+                        <div class="flex-vertical-align__suptitle">лайку</div>
+                        <div class="flex-vertical-align__text">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint tenetur fugit vel, eligendi illum, placeat quo vero reiciendis consectetur voluptatibus atque et itaque, hic, deleniti. Sunt commodi tempora voluptatum dolorum.
+                            <p class="flex-vertical-align__text flex-vertical-align__text--indent">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint tenetur fugit vel, eligendi illum, placeat quo vero reiciendis consectetur tempora voluptatum dolorum.
+                            </p>
+                        </div>
+                        <button class="flex-vertical-align__button" onclick="like();">лайк</button>
+                    </div>
+                </div>
+                <div class="flex-vertical-align__columns">
+                    <!-- ! Item -->
+                    <div class="flex-vertical-align__item">
+                        <div class="flex-vertical-align__subtitle">буду рад</div>
+                        <div class="flex-vertical-align__suptitle">комментарию</div>
+                        <div class="flex-vertical-align__text">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.
+                        </div>
+                        <button class="flex-vertical-align__button" onclick="comment();">комментировать</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+</div>            <!-- ! footer -->
+            <footer class="footer">
+                <div class="container">
+                    <div class="footer__text">Фрилансер по жизни 2019</div>
+                </div>
+            </footer>
+        </div>
+        <script src="js/script.js"></script>
+        <noscript>
+            <div class="noscript">
+                <div class="noscript__title">Внимание!</div>
+                <div class="noscript__title-sup">
+                    В вашем браузере отключен JavaScript.
+                    Или установлена старая версия JavaScript!
+                </div>
+                <div class="noscript__text">
+                    Без него большая часть функционала сайтаработать не будет или будет работать некорректно!
+                </div>
+            </div>
+        </noscript>
 </body>
 
 </html>
