--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"> -->
-    <!-- <meta name="viewport" content="width=device-width"> -->
-    <meta name="viewport" content="width=1060">
+    <meta name="viewport" content="width=device-width">
     <meta name=" format-detection" content="telephone=no">
     <meta name="description" content="...">
     <meta name="keywords" content="...">
@@ -133,7 +132,7 @@
                         <button class="flex-vertical-align__button" onclick="like();">лайк</button>
                     </div>
                 </div>
-                <div class="flex-vertical-align__columns">
+                <div class="flex-vertical-align__columns flex-vertical-align__columns--wrap">
                     <!-- ! Item -->
                     <div class="flex-vertical-align__item">
                         <div class="flex-vertical-align__subtitle">буду рад</div>
