adaptive hi.scss

--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
                     <li>Спасибо тебе за поддержку!</li>
                 </ul>
             </article>
-            <img src="../../image/hi/hi_image.png" alt="Hi image" class="hi__image">
+            <img src="../../image/hi/hi_image" alt="Hi image" class="hi__image">
         </div>
     </div>
 </div><!-- ! What -->
 <div class="what">
     <div class="container">
         <div class="what__row">
-            <img src="../../image/what/what-img.png" alt="What flexbox?" class="what__img">
+            <img src="../../image/what/what-img" alt="What flexbox?" class="what__img">
             <section class="what-flexbox">
                 <h2 class="what-flexbox__title title">Что такое FlexBox?</h2>
                 <p class="what-flexbox__text">
@@ -58,7 +58,27 @@
             </section>
         </div>
     </div>
-</div><!-- ! Flex columns -->
+</div>        </main>
+    </div>
+    <!-- ! footer -->
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__text">Фрилансер по жизни 2019</div>
+        </div>
+    </footer>
+    <script src="js/script.js"></script>
+    <noscript>
+        <div class="noscript">
+            <div class="noscript__title">Внимание!</div>
+            <div class="noscript__title-sup">
+                В вашем браузере отключен JavaScript.
+                Или установлена старая версия JavaScript!
+            </div>
+            <div class="noscript__text">
+                Без него большая часть функционала сайтаработать не будет или будет работать некорректно!
+            </div>
+        </div>
+<!-- ! Flex columns -->
 <div class="flex-columns">
     <div class="container">
         <div class="flex-columns__title title">Колонки с flex-контейнерами</div>
@@ -146,28 +166,7 @@
             </div>
         </div>
     </div>
-</div>        </main>
-    </div>
-    <!-- ! footer -->
-    <footer class="footer">
-        <div class="container">
-            <div class="footer__text">Фрилансер по жизни 2019</div>
-        </div>
-    </footer>
-
-    <script src="js/script.js"></script>
-    <noscript>
-        <div class="noscript">
-            <div class="noscript__title">Внимание!</div>
-            <div class="noscript__title-sup">
-                В вашем браузере отключен JavaScript.
-                Или установлена старая версия JavaScript!
-            </div>
-            <div class="noscript__text">
-                Без него большая часть функционала сайтаработать не будет или будет работать некорректно!
-            </div>
-        </div>
-    </noscript>
+</div>    </noscript>
 </body>
 
 </html>
