adaptive _hi.scss and _what.scss

--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
                     <li>Спасибо тебе за поддержку!</li>
                 </ul>
             </article>
-            <img src="../../image/hi/hi_image" alt="Hi image" class="hi__image">
+            <img src="../../image/hi/hi_image.png" alt="Hi image" class="hi__image">
         </div>
     </div>
 </div><!-- ! What -->
 <div class="what">
     <div class="container">
         <div class="what__row">
-            <img src="../../image/what/what-img" alt="What flexbox?" class="what__img">
+            <img src="../../image/what/what-img.png" alt="What flexbox?" class="what__img">
             <section class="what-flexbox">
                 <h2 class="what-flexbox__title title">Что такое FlexBox?</h2>
                 <p class="what-flexbox__text">
