adaptive _flex-columns.scss

--- a/index.html
+++ b/index.html
@@ -58,27 +58,7 @@
             </section>
         </div>
     </div>
-</div>        </main>
-    </div>
-    <!-- ! footer -->
-    <footer class="footer">
-        <div class="container">
-            <div class="footer__text">Фрилансер по жизни 2019</div>
-        </div>
-    </footer>
-    <script src="js/script.js"></script>
-    <noscript>
-        <div class="noscript">
-            <div class="noscript__title">Внимание!</div>
-            <div class="noscript__title-sup">
-                В вашем браузере отключен JavaScript.
-                Или установлена старая версия JavaScript!
-            </div>
-            <div class="noscript__text">
-                Без него большая часть функционала сайтаработать не будет или будет работать некорректно!
-            </div>
-        </div>
-<!-- ! Flex columns -->
+</div><!-- ! Flex columns -->
 <div class="flex-columns">
     <div class="container">
         <div class="flex-columns__title title">Колонки с flex-контейнерами</div>
@@ -121,7 +101,27 @@
             </div>
         </div>
     </div>
-</div><!-- ! Flex vertical align -->
+</div>        </main>
+    </div>
+    <!-- ! footer -->
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__text">Фрилансер по жизни 2019</div>
+        </div>
+    </footer>
+    <script src="js/script.js"></script>
+    <noscript>
+        <div class="noscript">
+            <div class="noscript__title">Внимание!</div>
+            <div class="noscript__title-sup">
+                В вашем браузере отключен JavaScript.
+                Или установлена старая версия JavaScript!
+            </div>
+            <div class="noscript__text">
+                Без него большая часть функционала сайтаработать не будет или будет работать некорректно!
+            </div>
+        </div>
+<!-- ! Flex vertical align -->
 <div class="flex-vertical-align">
     <div class="container">
         <div class="flex-vertical-align__title title">Вертикальное выравнивание</div>
