--- a/index.html
+++ b/index.html
@@ -101,27 +101,7 @@
             </div>
         </div>
     </div>
-</div>        </main>
-    </div>
-    <!-- ! footer -->
-    <footer class="footer">
-        <div class="container">
-            <div class="footer__text">Фрилансер по жизни 2019</div>
-        </div>
-    </footer>
-    <script src="js/script.js"></script>
-    <noscript>
-        <div class="noscript">
-            <div class="noscript__title">Внимание!</div>
-            <div class="noscript__title-sup">
-                В вашем браузере отключен JavaScript.
-                Или установлена старая версия JavaScript!
-            </div>
-            <div class="noscript__text">
-                Без него большая часть функционала сайтаработать не будет или будет работать некорректно!
-            </div>
-        </div>
-<!-- ! Flex vertical align -->
+</div><!-- ! Flex vertical align -->
 <div class="flex-vertical-align">
     <div class="container">
         <div class="flex-vertical-align__title title">Вертикальное выравнивание</div>
@@ -166,7 +146,27 @@
             </div>
         </div>
     </div>
-</div>    </noscript>
+</div>        </main>
+    </div>
+    <!-- ! footer -->
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__text">Фрилансер по жизни 2019</div>
+        </div>
+    </footer>
+    <script src="js/script.js"></script>
+    <noscript>
+        <div class="noscript">
+            <div class="noscript__title">Внимание!</div>
+            <div class="noscript__title-sup">
+                В вашем браузере отключен JavaScript.
+                Или установлена старая версия JavaScript!
+            </div>
+            <div class="noscript__text">
+                Без него большая часть функционала сайтаработать не будет или будет работать некорректно!
+            </div>
+        </div>
+    </noscript>
 </body>
 
 </html>
